apps/o11y/scrutiny/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: scrutiny-collector
  namespace: o11y
  labels:
    app: scrutiny-collector
spec:
  selector:
    matchLabels:
      app: scrutiny-collector
  template:
    metadata:
      labels:
        app: scrutiny-collector
    spec:
      hostNetwork: true
      hostPID: true
      dnsPolicy: ClusterFirstWithHostNet
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
      containers:
        - name: scrutiny-collector
          image: ghcr.io/analogj/scrutiny:v0.9.5-collector
          securityContext:
            privileged: true
            runAsUser: 0
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 384Mi
          volumeMounts:
            - name: dev
              mountPath: /dev
            - name: udev
              mountPath: /run/udev
              readOnly: true
            - name: proc
              mountPath: /host/proc
              readOnly: true
            - name: sys
              mountPath: /host/sys
              readOnly: true
            - name: collector-config
              mountPath: /opt/scrutiny/config
              readOnly: true
      volumes:
        - name: dev
          hostPath:
            path: /dev
        - name: udev
          hostPath:
            path: /run/udev
        - name: proc
          hostPath:
            path: /proc
        - name: sys
          hostPath:
            path: /sys
        - name: collector-config
          configMap:
            name: scrutiny-collector-config
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/os: linux
