apps/o11y/scrutiny/scrutiny-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: scrutiny
  namespace: o11y
spec:
  serviceName: scrutiny
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: scrutiny
  template:
    metadata:
      labels:
        app: scrutiny
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: scrutiny
          image: ghcr.io/analogj/scrutiny:v0.9.5-web
          ports:
            - name: scrutiny-port
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 25Mi
            limits:
              memory: 75Mi
          volumeMounts:
            - name: config
              mountPath: /opt/scrutiny/config
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: linstor-r3
        resources:
          requests:
            storage: 500Mi
