apps/o11y/scrutiny/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: scrutiny
  namespace: o11y
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: scrutiny
      sectionName: scrutiny
  hostnames:
    - scrutiny.i.recompiled.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: scrutiny
          port: 8080
